--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "type": "module",
   "scripts": {
     "start": "node src/app.js",
-    "dev": "nodemon src/app.js"
+    "dev": "nodemon src/app.js",
+    "format": "prettier --write 'src/**/*.js'"
   },
   "dependencies": {
     "@prisma/client": "^5.14.0",
